--- a/pchacker.vcxproj
+++ b/pchacker.vcxproj
@@ -173,7 +173,7 @@
       </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\$(solutionname)\PreBuildEvent_pchacker.bat</Command>
+      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -203,7 +203,7 @@
       </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\$(solutionname)\PreBuildEvent_pchacker.bat</Command>
+      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -243,7 +243,7 @@
       </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\$(solutionname)\PreBuildEvent_pchacker.bat</Command>
+      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -280,7 +280,7 @@
       </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\$(solutionname)\PreBuildEvent_pchacker.bat</Command>
+      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
