--- a/components/Taskman/Taskman.vcxproj
+++ b/components/Taskman/Taskman.vcxproj
@@ -34,7 +34,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{A391D735-BDBE-41DA-BBE5-8280D9156222}</ProjectGuid>
+    <ProjectGuid>{DF10BB76-4E83-4EE8-85B8-ECFECC80207A}</ProjectGuid>
     <RootNamespace>hijack</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -113,7 +113,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\;$(SolutionDir)..\..\3rdparty\spdlog\include\</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -143,7 +143,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\;$(SolutionDir)..\..\3rdparty\spdlog\include\</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <Optimization>Full</Optimization>
@@ -175,7 +175,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\;$(SolutionDir)..\..\3rdparty\spdlog\include\</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <Optimization>Disabled</Optimization>
@@ -203,7 +203,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\projects\;$(SolutionDir)..\..\projects\pchacker\components\$(projectname)\;$(SolutionDir)..\..\include\;$(SolutionDir)..\..\3rdparty\;$(SolutionDir)..\..\3rdparty\bit7z\include\;$(SolutionDir)..\..\projects\pchacker\;$(SolutionDir)..\..\3rdparty\spdlog\include\</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <Optimization>Full</Optimization>
