--- a/pchacker.vcxproj
+++ b/pchacker.vcxproj
@@ -33,6 +33,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="taskman.cpp" />
     <ClCompile Include="uibase.cpp" />
     <ClCompile Include="uiconfigure.cpp" />
     <ClCompile Include="uicustom.cpp" />
@@ -51,6 +52,7 @@
     <ClInclude Include="pchacker.h" />
     <ClInclude Include="Setup.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="taskman.h" />
     <ClInclude Include="uibase.h" />
     <ClInclude Include="uiconfigure.h" />
     <ClInclude Include="uicustom.h" />
