--- a/pchacker.vcxproj
+++ b/pchacker.vcxproj
@@ -182,10 +182,12 @@
       </LargeAddressAware>
     </Link>
     <PostBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PostBuildEvent_pchacker.bat $(Configuration) $(OutDir)$(TargetName)$(TargetExt)</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -211,10 +213,12 @@
       <IgnoreSpecificDefaultLibraries>msvcrtd.lib;LIBCMTD;</IgnoreSpecificDefaultLibraries>
     </Link>
     <PostBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PostBuildEvent_pchacker.bat $(Configuration) $(OutDir)$(TargetName)$(TargetExt)</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -250,10 +254,12 @@
       </LargeAddressAware>
     </Link>
     <PostBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PostBuildEvent_pchacker.bat $(Configuration) $(OutDir)$(TargetName)$(TargetExt)</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -286,10 +292,12 @@
       <AdditionalDependencies>MSVCRT.LIB;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PostBuildEvent_pchacker.bat $(Configuration) $(OutDir)$(TargetName)$(TargetExt)</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>call $(solutiondir)..\..\compile\scripts\projects\PreBuildEvent_pchacker.bat $(Configuration)</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
